assets/css/style.css
/* Google fonts imports */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Wix+Madefor+Display:wght@400..800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.wrapper {
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
    overflow: hidden;
    /* Ensures no overflow */
}

/* Main Heading */
#main-heading {
    background-color: #1D2F6F;
    color: #D6E3F8;
    font-style: italic;
    font-size: 200%;
    font-family: "Josefin Sans", Verdana, sans-serif;
    font-weight: 600;
    padding: 1rem;
    text-align: center;
}

/* Nav bar */
.nav-list {
    list-style-type: none;
    font-family: "Josefin Sans", Verdana, sans-serif;
    font-size: 120%;
    background-color: #D6E3F8;
    color: #1D2F6F;
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 0.5rem;
    box-sizing: border-box;
}

/* Remove underline and space out options */
.nav-options {
    text-decoration: none;
    margin-right: 2rem;
}

/* Change the color of links on hover */
.nav-options:hover {
    text-decoration: underline;
    color: #0582CA
}

/* Main Content */
.container {
    font-family: "Open Sans", sans-serif;
    font-size: 1rem;
    color: #1D2F6F;
    background-color: #EEF3FC;
    padding: 1rem;
    line-height: 1.5rem;
}

.services-offered {
    list-style-type: none;
    color: #1D2F6F;
    line-height: 2rem;
}

/* Book Appointment Button on Main Page */
.app-button {
    display: block;
    text-decoration: none;
    background-color: #1D2F6F;
    color: #EEF3FC;
    height: 2rem;
    width: 12rem;
    text-align: center;
    border-radius: 25px;
    padding: 0.2rem;
}

.app-button:hover {
    text-decoration: underline;
}

/* Images */
img {
    width: 20rem;
    max-width: 100%;
    height: auto;
    margin: 0;
    padding: 0;
}

/* Footer */
.social-network-info {
    list-style-type: none;
    font-family: "Josefin Sans", Verdana, sans-serif;
    font-size: 100%;
    background-color: #D6E3F8;
    color: #1D2F6F;
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 0.5rem;
    text-align: center;
    box-sizing: border-box;
}

.footer-options {
    text-decoration: none;
    margin-right: 1rem;
    color: #1D2F6F;
    font-size: 150%;
}

/* Change the color of links on hover */
.footer-options:hover {
    text-decoration: underline;
    color: #0582CA
}

/* Change the color of links on hover */
.nav-options:hover {
    text-decoration: underline;
    color: #0582CA
}

/* Book Appointment Page */

/* Book Appointment form */
.form {
    background-color: #D6E3F8;
    border: #D6E3F8;
    height: 20px;
    font-size: 15px;
    color:#1D2F6F;
}

.add-info {
    background-color: #D6E3F8;
    border: #D6E3F8;
    font-size: 15px;
    color:#1D2F6F;
}

/* Appointment booking disclaimer */
.disclaimer {
    font-style: italic;
    font-size: 90%;
}

/* About Us Page */
.bella-image img {
    width: 15rem;
    max-width: 100%;
    height: auto;
    margin: 0;
    padding: 0;
}

.coco-image img {
    width: auto;
    max-width: 100%;
    height: 20rem;
    margin: 0;
    padding: 0;
}

/* Media queries on screens less than 600px */
@media screen and (max-width: 600px) {

    /* List nav options vertically on screens smaller than 600px */
    .nav-list {
        list-style-type: none;
        font-family: "Josefin Sans", Verdana, sans-serif;
        font-size: 120%;
        background-color: #D6E3F8;
        color: #1D2F6F;
        display: list-item;
        width: 100%;
        padding: 0.5rem;
    }

    .nav-options {
        text-decoration: none;
        margin-right: 2rem;
    }

    /* Change the color of links on hover */
    .nav-options:hover {
        text-decoration: underline;
        color: #0582CA
    }


    /* Change Image size on smaller screens */
    img {
        width: 90%;
        height: auto;
        max-width: 90%;
        min-width: 80%;
        margin: 0;
        padding: 0;
    }

    /* Additional Information free text box */
    .add-info {
        background-color: #D6E3F8;
        border: #D6E3F8;
        font-size: 15px;
        color:#1D2F6F;
        max-width: 100%;
    }
}

